syntax = "proto3";

message Status {
    string version = 1;
    uint64 uptime = 2;
    uint64 dataAsOf = 3;
    uint64 requestsFulfilled = 4;
}

message Error {
    string error = 1;
}
